email cropping fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -905,14 +905,12 @@ h3.section__title {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 .form__wrapper {
   max-width: 650px;
   width: 100%;
-  height: 50px;
-  border-radius: 60px;
-  overflow: hidden;
+  height: 110px;
   margin: 0 auto;
   transform: scale(0.85);
 }
